<resources>
    <string name="app_name">Movvy</string>
    <string name="year">year</string>
    <string name="film_description">Film description</string>
    <string name="genres">Genres</string>
    <string name="country">"Country: "</string>
    <string name="imdb_rating">IMDB Rating</string>
    <string name="rated">"Rated: "</string>
    <string name="release_date">"Release Date: "</string>
    <string name="search">Search</string>
    <string name="search_results_for">"Search results for "</string>
    <string name="search_results_number">"Number of results is "</string>
    <string name="search_hint">Search</string>
    <string name="app_image_description">@string/app_name</string>

    <string name="no_answer">N/A</string>
    <string name="no_image">Image not available</string>

    <string name="transition_main_search">main_search</string>

    <string name="share_subject">What do you think about this movie?</string>
    <string name="share_via">Share via..</string>
    <string name="share">Share</string>
    <string name="link">Link</string>

</resources>
